hopefully prevent scrolling on mobile and adjusted threshold for numbers

--- a/styles.css
+++ b/styles.css
@@ -644,7 +644,7 @@ body::-webkit-scrollbar {
         /* INTRO */
 
         .viewport-container {
-            height: 100svh;
+            height: 100vh;
             width: 100vw;
 
             .inside-box {
